--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,6 +1,6 @@
 .bookIcon{
-    width: 4rem;
-    height: 4rem;
+    width: 2.5rem;
+    height: 2.5rem;
 }
 .searchIcon{
     width: 1rem;
@@ -9,8 +9,8 @@
 
 }
 .shopIcon{
-    width: 2rem;
-    height: 2rem;
+    width: 1.3rem;
+    height: 1.3rem;
     color: rgb(81, 81, 81);
 }
 .logo{
@@ -22,10 +22,10 @@
     align-items: center;
     width: 100%;
     justify-content: space-between;
-    padding: 0.1rem 1rem;
+    padding: 0.6rem 1.5rem;
 }
 .searchBox{
-    background-color: rgb(236, 236, 236,1);
+    background-color: #f1f6ff;
     display: flex;
     align-items: center;
     width: 24rem;
@@ -37,5 +37,15 @@
 }
 .searchInput{
     border: none;
-    background-color: rgb(236, 236, 236,1);
+    background-color: #f1f6ff;
+}
+.shopContent{
+    background-color: #f1f6ff;
+    width: 2.5rem;
+    height: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2rem; 
+    cursor: pointer;
 }
