--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -8,6 +8,7 @@
     width: 100%;
 }
 .main{
-    background-color: rgb(235, 235, 235,1);
+    background-color: #f1f6ff;
     width: 100%;
+    border-radius: 2rem 2rem 0 0;
 }
