--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -17,6 +17,11 @@
     display: flex;
     align-items: center;
 }
+.searchButton{
+    border: none;
+    display: flex;
+    cursor: pointer;
+}
 .container{
     display: flex;
     align-items: center;
@@ -38,6 +43,11 @@
 .searchInput{
     border: none;
     background-color: #f1f6ff;
+    width: 100%;
+
+}
+.searchInput:focus{
+    border: none !important;
 }
 .shopContent{
     background-color: #f1f6ff;
