--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -13,6 +13,22 @@
     height: 1.3rem;
     color: rgb(81, 81, 81);
 }
+.heartIcon{
+    width: 1.3rem;
+    height: 1.3rem;
+    color: rgb(81, 81, 81);
+    margin-right: 0.3rem;
+}
+.shopIcon:hover{
+    width: 1.5rem;
+    height: 1.5rem;
+    color: rgb(1, 100, 150);
+}
+.heartIcon:hover{
+    width: 1.5rem;
+    height: 1.5rem;
+    color: rgb(255, 0, 0);
+}
 .logo{
     display: flex;
     align-items: center;
@@ -50,11 +66,7 @@
     border: none !important;
 }
 .shopContent{
-    background-color: #f1f6ff;
-    width: 2.5rem;
-    height: 2.5rem;
     display: flex;
-    justify-content: center;
     align-items: center;
     border-radius: 2rem; 
     cursor: pointer;
