--- a/src/styles/BookDetail.module.css
+++ b/src/styles/BookDetail.module.css
@@ -3,16 +3,11 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    background: #f5f5f5;
     border-radius: 10px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
   
-  .bookDetail:hover {
-    transform: scale(1.05);
-    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2); 
-  }
+  
   
   .bookImage {
     width: 100%;
@@ -37,4 +32,7 @@
     color: #666;
     margin-bottom: 20px;
   }
-  
+  .addButton{
+    display: flex;
+    justify-content: center;
+  }
