--- a/src/styles/Core.module.css
+++ b/src/styles/Core.module.css
@@ -52,4 +52,27 @@
     font-size: 0.5em; 
     color: #666;
   }
+  .modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    z-index: 1000;
+  }
   
+  .modalBackdrop {
+    position: fixed;
+    top: 0;
+    right: 0;
+    color: rgba(183, 0, 0, 0.5);
+    z-index: 500;
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+  .label{
+    color: red;
+    font-size: 0.7rem;
+    margin-bottom: 0.3rem;
+  }
