--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,11 +1,12 @@
 .container {
     background-color: #f1f6ff;
     padding: 1rem;
+    height: 100vh;
 }
 .box{
     padding: 2rem;
     background-color: white;
     width: 100%;
     height:100vh;
-    border-radius:2rem
+    border-radius: 2rem 2rem 0 0;
 }
