--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -2,13 +2,17 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    min-height: 100vh;
 }
 .content{
     display: flex;
     width: 100%;
+    min-height: 100vh;
 }
 .main{
     background-color: #f1f6ff;
     width: 100%;
     border-radius: 2rem 2rem 0 0;
+    min-height: 100vh;
+
 }
