--- a/src/styles/Sidebar.module.css
+++ b/src/styles/Sidebar.module.css
@@ -8,7 +8,7 @@
 }    
 
 .container{
-    height: 100vh;
+    min-height: 100vh;
     box-shadow: 5px 5px 5px 0px rgba(234, 234, 234, 0.5);
     width: 13rem;
 }
