--- a/src/styles/BookDetail.module.css
+++ b/src/styles/BookDetail.module.css
@@ -1,38 +1,75 @@
 .bookDetail {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    border-radius: 10px; 
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+.container{
+  padding: 1rem;
+}
+.bookImage {
+  flex-basis: 100%;
+  max-width: 200px;
+  margin: auto;
+}
+
+.bookInfo {
+  flex-grow: 1;
+  padding: 20px;
+}
+
+.bookTitle {
+  font-size: 1.8em;
+  margin-bottom: 15px;
+}
+
+.bookInfo h4 {
+  font-size: 1em;
+  overflow-wrap: break-word;
+  max-height: 200px;
+  overflow-y: auto;
+}
+
+.addButton {
+  text-align: center;
+  padding: 20px;
+}
+
+@media (min-width: 768px) {
+  .bookDetail {
+    flex-wrap: nowrap;
   }
-  
-  
-  
+
   .bookImage {
-    width: 100%;
-    max-width: 200px;
-    margin-bottom: 20px;
-    border-radius: 5px;
-    overflow: hidden;
+    flex-basis: 40%;
   }
-  
+
   .bookInfo {
-    text-align: center;
+    flex-basis: 60%;
   }
-  
-  .bookTitle {
-    font-size: 1.5em; 
-    color: #333;
-    margin-bottom: 10px;
-  }
-  
-  .bookDescription {
-    font-size: 1em;
-    color: #666;
-    margin-bottom: 20px;
-  }
-  .addButton{
-    display: flex;
-    justify-content: center;
-  }
+}
+@keyframes blinkRed {
+  0% { opacity: 1; }
+  50% { opacity: 0.5; }
+  100% { opacity: 1; }
+}
+
+@keyframes blinkGreen {
+  0% { opacity: 1; }
+  50% { opacity: 0.5; }
+  100% { opacity: 1; }
+}
+
+.notForSaleAlert {
+  color: red;
+  animation: blinkRed 1s linear infinite;
+  margin-top: 1rem;
+}
+
+.onSaleAlert {
+  color: green;
+  animation: blinkGreen 1s linear infinite;
+  margin-top: 1rem;
+}
